# phoenix-vpn

./: .gitattributes  .gitignore  LICENSE  README.fa.md  README.md  THIRD-PARTY-NOTICES.txt  android.tar  go.mod  go.sum  main.go  readme  tools.go
.github/workflows/: build-apk.yml
android/: local.properties.1  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: ir-cidrs.txt  resolvers.txt
android/app/src/main/cpp/: CMakeLists.txt  default_configs.cpp
android/app/src/main/java/: MainActivity.kt  VayVpnService.kt
android/gradle/wrapper/: gradle-wrapper.properties
bridge/: go.mod  run.go
f35/: LICENSE  README.md  config.go  engine.go  go.mod  http.go  resolver.go  scan.go
f35/cmd/f35/: config.go  main.go
mobile/: default_configs.go  dns.json  f35_bridge.go  global_scanner.go  go.mod  go.sum  hysteria.go  mobile.go  pingtools.go  reality.go  scanner.go  ssh_proxy.go  tools.go  updater.go  verify.go  vless.go  xray_engine.go
scripts/: README.md  build_aar.sh  setup_vaydns.py
vaydns/: README.md  go.mod  go.sum
vaydns/client/: client.go  dns.go  http.go  tls.go  udp.go  utls.go  weightedlist.go
vaydns/dns/: dns.go  dns_test.go
vaydns/noise/: noise_test.go
vaydns/turbotunnel/: clientid.go  consts.go  queuepacketconn.go  remotemap.go  wireconfig.go
vaydns/vaydns-server/: main.go
(+100 files in other folders)
